<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.gogetout.go.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="200"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="1"
        android:title="@string/menu_search"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/menu_map"
        android:icon="@drawable/ic_map_white_24dp"
        android:orderInCategory="2"
        android:title="@string/menu_map"
        app:showAsAction="always" />
    <!--<item
        android:id="@+id/menu_notifications"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:orderInCategory="3"
        android:title="@string/menu_notifications"
        app:showAsAction="always" />-->
</menu>
