<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:paddingTop="16dp">

    <!--<ImageView
        android:id="@+id/eimage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/eventpicture"
        android:src="@mipmap/ic_launcher" />-->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circlerUserImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/ic_account_circle_black_36dp" />


    <LinearLayout
        android:layout_marginLeft="72dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="16dp"
        android:paddingLeft="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:lines="1"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lines="1"
            android:textSize="14sp"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_alignParentLeft="true"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_alignParentRight="true"
                android:fontFamily="sans-serif"
                android:textSize="14sp" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>